# lorenzocesconetto.github.io

./: .gitignore  .nojekyll  CNAME  README.md  _config.yml  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  todo.html
_includes/: author-box.html  contact-list.html  footer.html  head_post.html  header.html  javascripts.html  newsletter.html  rodolfo-box.html
_layouts/: default_post.html  home-page.html  post.html
_pages/: about-me.html  about-this-blog.html  about.html
_posts/: 2017-08-20-the-forest-in-the-fog.markdown  2017-12-24-a-carta-que-mandei-pro-reitor-da-unicamp.markdown  2017-12-24-a-importancia-de-rodar-sem-estepes.markdown  2017-12-24-universidade-brasileira-vs-americana.markdown  2017-12-24-universidade.markdown  2017-12-25-como-controlar-o-uso-de-redes-sociais.markdown  2018-01-21-filosofia-de-um-vc-do-vale.markdown  2018-04-09-licao-ensinada-pelo-vale-do-silicio.markdown  2019-04-07-como-abordar-problemas-de-data-science.markdown  2019-07-04-linha-de-comanda-para-ciencia-de-dados.markdown  2019-07-04-linha-de-comando-para-ciencia-de-dados.markdown  2019-11-16-expressoes-regulares-zero-to-hero.markdown
assets/css/: main.css
assets/js/: smooth.js
posts/: _metadata.yml
posts/RoPE/: _visualizations.ipynb  index.html  index.qmd
posts/post-with-code/: index.html  visualizations.html
site_libs/bootstrap/: bootstrap-dark-a3a3163c528fce66c8cbb601af61b2ca.min.css  bootstrap-ec7ccfbb941a833fdbb8fb4bea212431.min.css
