[project]
name = "blog-technical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
]
